--- a/site/index.html
+++ b/site/index.html
@@ -45,7 +45,7 @@
         }
 
         img {
-            width: 133px;
+            width: 200px;
         }
 
         .header {
@@ -57,8 +57,8 @@
             align-items: center;
             justify-content: space-between;
             padding: 0 20px;
-            font-family: sans-serif;
-            color: #320099;
+            font-family: Montserrat;
+            color: #1B2631;
         }
 
         h2 {
@@ -76,11 +76,12 @@
 <body>
     <script src="./main.js"></script>
     <div class="header">
-        <img src="./assets/cosmian-logo-color-234x50.svg">
+        <img src="./assets/DOCS logo@2x.png">
         <h2>Cloudproof Encryption</h2>
     </div>
     <div class="menu">
-        <button onclick="location.href='findex.html';">CLOUDPROOF ENCRYPTION</button>
+        <button onclick="location.href='findex.html';">FINDEX</button>
+        <button onclick="location.href='cloudproof.html';">CLOUDPROOF ENCRYPTION</button>
         <!-- <button onclick="location.href='abe.html';">ABE DEMO</button> -->
     </div>
 </body>
