--- a/site/cloudproof.html
+++ b/site/cloudproof.html
@@ -131,6 +131,7 @@
             display: flex;
             align-items: center;
             width: 70%;
+            justify-content: center;
         }
 
         .columns {
