--- a/site/findex.html
+++ b/site/findex.html
@@ -108,6 +108,7 @@
         display: flex;
         align-items: center;
         width: 70%;
+        justify-content: center;
     }
 
     .columns {
