CI tests on Findex: upsert+search using Findex WASM package

--- a/site/findex.html
+++ b/site/findex.html
@@ -207,7 +207,7 @@
     </div>
     <div class="demo">
         <h3>Employees database</h3>
-        <button  id="index_button" onclick="IndexAndloadElements(); return false">Display and upsert employees</button>
+        <button  id="index_button" onclick="IndexAndLoadElements(); return false">Display and upsert employees</button>
         <div class="block">
         <img class="picto" src="./assets/Cleartext database.png">
         <div id="clear_db" class="tab"></div>
