Fix packaging and exports all modules for Typescript/Javascript

--- a/site/index.html
+++ b/site/index.html
@@ -26,7 +26,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <base href="/" />
-    <title>Cosmian JS Lib</title>
+    <title>Cosmian JS Lib v1.0.8</title>
     <style>
         body {
             display: flex;
@@ -82,7 +82,7 @@
     <div class="menu">
         <button onclick="location.href='findex.html';">FINDEX</button>
         <button onclick="location.href='cloudproof.html';">CLOUDPROOF ENCRYPTION</button>
-        <!-- <button onclick="location.href='abe.html';">ABE DEMO</button> -->
+        <button onclick="location.href='abe.html';">ATTRIBUTE BASED ENCRYPTION</button>
     </div>
 </body>
 
