--- a/site/cloudproof.html
+++ b/site/cloudproof.html
@@ -26,7 +26,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <base href="/" />
-    <title>Cosmian JS Lib</title>
+    <title>Cloudproof JS Lib</title>
     <style>
         body {
             display: flex;
