--- a/site/index.html
+++ b/site/index.html
@@ -1,89 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
     />
     <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/brands.min.css"
-        integrity="sha512-lCU0XyQA8yobR7ychVxEOU5rcxs0+aYh/9gNDLaybsgW9hdrtqczjfKVNIS5doY0Y5627/+3UVuoGv7p8QsUFw=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/brands.min.css"
+      integrity="sha512-lCU0XyQA8yobR7ychVxEOU5rcxs0+aYh/9gNDLaybsgW9hdrtqczjfKVNIS5doY0Y5627/+3UVuoGv7p8QsUFw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link
-        rel="icon"
-        href="https://raw.githubusercontent.com/Cosmian/Files/main/cosmian-c-orange-42x50.svg"
-        type="image/png"
-        sizes="192x192"
+      rel="icon"
+      href="https://raw.githubusercontent.com/Cosmian/Files/main/cosmian-c-orange-42x50.svg"
+      type="image/png"
+      sizes="192x192"
     />
     <meta http-equiv="x-dns-prefetch-control" content="off" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <base href="/" />
-    <title>Cosmian JS Lib v3.0.1</title>
+    <title>Cloudproof JS Lib v3.0.2</title>
     <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            margin: 0;
-        }
+      body {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+      }
 
-        button {
-            height: 40px;
-            width: 200px;
-            margin: 20px;
-            background: #e3431a;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-        }
+      button {
+        height: 40px;
+        width: 200px;
+        margin: 20px;
+        background: #e3431a;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+      }
 
-        img {
-            width: 200px;
-        }
+      img {
+        width: 200px;
+      }
 
-        .header {
-            max-width: 100%;
-            height: 60px;
-            border-bottom: 1px solid #d9d9d9;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 20px;
-            font-family: Montserrat;
-            color: #1B2631;
-        }
+      .header {
+        max-width: 100%;
+        height: 60px;
+        border-bottom: 1px solid #d9d9d9;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 20px;
+        font-family: Montserrat;
+        color: #1b2631;
+      }
 
-        h2 {
-            margin-right: 50px;
-        }
+      h2 {
+        margin-right: 50px;
+      }
 
-        .menu {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+      .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <script src="./main.js"></script>
     <div class="header">
-        <img src="./assets/DOCS logo@2x.png">
-        <h2>Cloudproof Encryption</h2>
+      <img src="./assets/DOCS logo@2x.png" />
+      <h2>Cloudproof Encryption</h2>
     </div>
     <div class="menu">
-        <button onclick="location.href='findex.html';">FINDEX</button>
-        <button onclick="location.href='cloudproof.html';">CLOUDPROOF ENCRYPTION</button>
-        <button onclick="location.href='abe.html';">ATTRIBUTE BASED ENCRYPTION</button>
+      <button onclick="location.href='findex.html';">FINDEX</button>
+      <button onclick="location.href='cloudproof.html';">
+        CLOUDPROOF ENCRYPTION
+      </button>
+      <button onclick="location.href='abe.html';">
+        ATTRIBUTE BASED ENCRYPTION
+      </button>
     </div>
-</body>
-
+  </body>
 </html>
